# CompanyNameMatchMaker

./: .gitignore  README.md  docker-compose.yml  inti_data.py  main.py  pyproject.toml
app/client/: __init__.py  typesense.py
app/schemas/: company.py
app/utils/: __init__.py  load_data.py  scoreboard.py
